--- a/NewPlatform.Flexberry.ORM.ClickHouseDataService.nuspec
+++ b/NewPlatform.Flexberry.ORM.ClickHouseDataService.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>NewPlatform.Flexberry.ORM.ClickHouseDataService</id>
-    <version>1.0.0-alpha01</version>
+    <version>1.0.0-alpha02</version>
     <title>Flexberry ORM ClickHouseDataService</title>
     <authors>New Platform Ltd.</authors>
     <owners>New Platform Ltd.</owners>
@@ -17,7 +17,7 @@
     <copyright>Copyright New Platform Ltd 2019</copyright>
     <tags>Flexberry ORM BigData ClickHouse</tags>
     <dependencies>
-      <dependency id="NewPlatform.Flexberry.ORM" version="5.1.0-beta05" />
+      <dependency id="NewPlatform.Flexberry.ORM" version="5.0.0" />
       <dependency id="NewPlatform.Flexberry.ClickHouse.Ado" version="1.1.17-alpha01" />
     </dependencies>
   </metadata>
