--- a/NewPlatform.Flexberry.ORM.ClickHouseDataService/NewPlatform.Flexberry.ORM.ClickHouseDataService.csproj
+++ b/NewPlatform.Flexberry.ORM.ClickHouseDataService/NewPlatform.Flexberry.ORM.ClickHouseDataService.csproj
@@ -7,7 +7,7 @@
     <Copyright>Copyright New Platform Ltd 2021</Copyright>
     <Company>New Platform Ltd</Company>
     <PackageTags>Flexberry ORM BigData ClickHouse</PackageTags>
-    <VersionPrefix>5.0.0-alpha01</VersionPrefix>
+    <VersionPrefix>6.0.0-alpha01</VersionPrefix>
     <VersionSuffix></VersionSuffix>
     <Product>Flexberry PLATFORM</Product>
     <PackageId>NewPlatform.Flexberry.ORM.ClickHouseDataService</PackageId>
@@ -39,7 +39,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NewPlatform.Flexberry.ORM" Version="5.0.0" />
+    <PackageReference Include="NewPlatform.Flexberry.ORM" Version="6.0.0-beta13" />
     <PackageReference Include="NewPlatform.Flexberry.ClickHouse.Ado" Version="1.1.17-alpha01" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
