--- a/Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/App.config
+++ b/Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/App.config
@@ -7,16 +7,10 @@
   <connectionStrings>
     <!-- Please set up your own database connection strings before you run integrated tests. -->
     <add name="ConnectionStringPostgres" connectionString="SERVER=localhost;User ID=postgres;Password=p@ssw0rd;Port=5432;" />
-    <add name="ConnectionStringOracle" connectionString="" />
-    <add name="ConnectionStringMssql" connectionString="" />
-    <add name="ConnectionStringLocalSqlServer" connectionString="Data Source=(LocalDb)\v11.0;" />
-    <add name="TestConnStr" connectionString="SERVER=.\SQLEXPRESS;Trusted_connection=yes;DATABASE=Test;" />
+    <add name="ConnectionStringClickHouse" connectionString="Compress=True;CheckCompressedHash=True;Compressor=lz4;Host=localhost;Port=19000;User=default;Password=
+" />
   </connectionStrings>
   <appSettings>
-    <add key="TestAppNotNormal_DSType" value="ICSSoft.STORMNET.Business.MSSQLDataService, ICSSoft.STORMNET.Business.MSSQLDataService" />
-    <add key="TestAppNormal_DSType" value="ICSSoft.STORMNET.Business.MSSQLDataService, ICSSoft.STORMNET.Business.MSSQLDataService" />
-    <add key="TestApp_DSType" value="ICSSoft.STORMNET.Business.ODBCAccessDataService, ICSSoft.STORMNET.Business.ODBCDataService" />
-    <add key="TestAudit_DSType" value="ICSSoft.STORMNET.Business.ODBCAccessDataService, ICSSoft.STORMNET.Business.ODBCDataService" />
     <add key="DataServiceType" value="ICSSoft.STORMNET.Business.MSSQLDataService, ICSSoft.STORMNET.Business.MSSQLDataService" />
     <add key="UsingNamespaceForRights" value="true" />
     <add key="AppNameForAzMan" value="myAppSecurityName" />
@@ -25,7 +19,7 @@
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <container>
       <register type="ICSSoft.STORMNET.Security.ISecurityManager, ICSSoft.STORMNET.DataObject" mapTo="ICSSoft.STORMNET.Security.EmptySecurityManager, ICSSoft.STORMNET.DataObject" />
-      <register type="ICSSoft.STORMNET.Business.IDataService, ICSSoft.STORMNET.Business" mapTo="ICSSoft.STORMNET.Business.PostgresDataService, ICSSoft.STORMNET.Business.PostgresDataService">
+      <register type="ICSSoft.STORMNET.Business.IDataService, ICSSoft.STORMNET.Business" mapTo="NewPlatform.Flexberry.ORM.ClickHouseDataService, NewPlatform.Flexberry.ORM.ClickHouseDataService">
         <constructor />
       </register>
       <register type="ICSSoft.STORMNET.Business.Audit.IAuditService, ICSSoft.STORMNET.Business" mapTo="ICSSoft.STORMNET.Business.Audit.AuditService, ICSSoft.STORMNET.Business" />
