--- a/NewPlatform.Flexberry.ORM.ClickHouseDataService/NewPlatform.Flexberry.ORM.ClickHouseDataService.csproj
+++ b/NewPlatform.Flexberry.ORM.ClickHouseDataService/NewPlatform.Flexberry.ORM.ClickHouseDataService.csproj
@@ -40,7 +40,7 @@
 
   <ItemGroup>
     <PackageReference Include="NewPlatform.Flexberry.ClickHouse.Ado" Version="1.3.1-alpha09" />
-    <PackageReference Include="NewPlatform.Flexberry.ORM" Version="6.0.1-beta01" />
+    <PackageReference Include="NewPlatform.Flexberry.ORM" Version="6.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
