--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,16 +34,18 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-        
+
       - name: NuGet Restore
         run: nuget restore "NewPlatform.Flexberry.ORM.ClickHouseDataService.sln" -NonInteractive
-        
+
       - name: Compile code
-        run:  msbuild /p:Configuration=Debug "NewPlatform.Flexberry.ORM.ClickHouseDataService.sln" 
+        run: msbuild /p:Configuration=Debug "NewPlatform.Flexberry.ORM.ClickHouseDataService.sln"
 
       - name: Install xunit.runner.console
         run: nuget install xunit.runner.console -Version 2.4.1 -OutputDirectory testrunner
 
-      - name: Test code
-        run:  mono ./testrunner/xunit.runner.console.2.4.1/tools/net461/xunit.console.exe ./Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/bin/Debug/net461/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests.dll
-        
+      - name: Test under dotnet
+        run: dotnet test ./Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/bin/Debug/netcoreapp3.1/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests.dll
+
+      - name: Test under mono
+        run: mono ./testrunner/xunit.runner.console.2.4.1/tools/net461/xunit.console.exe ./Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/bin/Debug/net461/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests.dll
