--- a/Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/App.config
+++ b/Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/App.config
@@ -1,19 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Unity.Configuration" />
   </configSections>
   <connectionStrings>
     <!-- Please set up your own database connection strings before you run integrated tests. -->
-    <add name="ConnectionStringPostgres" connectionString="SERVER=localhost;User ID=postgres;Password=p@ssw0rd;Port=5432;" />
-    <add name="ConnectionStringClickHouse" connectionString="Compress=True;CheckCompressedHash=True;Compressor=lz4;Host=localhost;Port=19000;User=default;Password=
-" />
+    <add name="ConnectionStringClickHouse" connectionString="Compress=True;CheckCompressedHash=True;Compressor=lz4;Host=localhost;Port=19000;User=default;Password=" />
   </connectionStrings>
   <appSettings>
-    <add key="DataServiceType" value="ICSSoft.STORMNET.Business.MSSQLDataService, ICSSoft.STORMNET.Business.MSSQLDataService" />
-    <add key="UsingNamespaceForRights" value="true" />
-    <add key="AppNameForAzMan" value="myAppSecurityName" />
     <add key="xunit.diagnosticMessages" value="true" />
   </appSettings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
@@ -33,71 +27,11 @@
     </container>
     <alias alias="singleton" type="Unity.Lifetime.ContainerControlledLifetimeManager, Unity.Abstractions" />
   </unity>
-  <log4net>
-    <appender name="AdoNetAppender" type="ICSSoft.STORMNET.CustomAdoNetAppender">
-      <bufferSize value="0" />
-      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <ConnectionStringName value="DefConnStr" />
-      <commandText value="INSERT INTO [ApplicationLog] ([primaryKey],[Timestamp],[ThreadName],[Category],[ProcessName],[Message],[FormattedMessage]) VALUES (NEWID(), @log_date, @thread, @log_level, @logger, @message, @exception)" />
-      <parameter>
-        <parameterName value="@log_date" />
-        <dbType value="DateTime" />
-        <layout type="log4net.Layout.RawTimeStampLayout" />
-      </parameter>
-      <parameter>
-        <parameterName value="@thread" />
-        <dbType value="String" />
-        <size value="512" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%thread" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@log_level" />
-        <dbType value="String" />
-        <size value="64" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%level" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@logger" />
-        <dbType value="String" />
-        <size value="512" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%logger" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@message" />
-        <dbType value="String" />
-        <size value="2500" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%message" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@exception" />
-        <dbType value="String" />
-        <size value="4000" />
-        <layout type="log4net.Layout.ExceptionLayout" />
-      </parameter>
-    </appender>
-    <root>
-      <level value="DEBUG" />
-      <appender-ref ref="AdoNetAppender" />
-    </root>
-  </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <publisherPolicy apply="no" />
-        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral" />
-        <bindingRedirect oldVersion="4.121.0.0 - 4.65535.65535.65535" newVersion="4.121.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
