--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  XUNIT_RUNNER: "2.4.1"
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -33,19 +36,39 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Several .NET Core versions will be used during the test run.
+      # The lowest version gets installed first in order to prevent
+      # "a newer version is already installed" install errors.
+
+      - name: Install .NET Core 3.1
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.x
+
+      # Building requires an up-to-date .NET SDK.
+
+      - name: Install .NET 6.0
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
 
       - name: NuGet Restore
-        run: nuget restore "NewPlatform.Flexberry.ORM.ClickHouseDataService.sln" -NonInteractive
-
-      - name: Compile code
-        run: msbuild /p:Configuration=Debug "NewPlatform.Flexberry.ORM.ClickHouseDataService.sln"
+        run: dotnet restore "NewPlatform.Flexberry.ORM.ClickHouseDataService.sln"
 
       - name: Install xunit.runner.console
-        run: nuget install xunit.runner.console -Version 2.4.1 -OutputDirectory testrunner
+        run: nuget install xunit.runner.console -Version $XUNIT_RUNNER -OutputDirectory testrunner
 
-      - name: Test under dotnet
+      - name: Compile code
+        run: dotnet build --no-restore -v q /p:WarningLevel=0 -c Debug "NewPlatform.Flexberry.ORM.ClickHouseDataService.sln"
+
+      - name: Test on dotnet 3.1
         run: dotnet test ./Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/bin/Debug/netcoreapp3.1/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests.dll
 
+      - name: Test on dotnet 6.0
+        run: dotnet test ./Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/bin/Debug/net6.0/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests.dll
+
       - name: Test under mono
-        run: mono ./testrunner/xunit.runner.console.2.4.1/tools/net461/xunit.console.exe ./Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/bin/Debug/net461/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests.dll
+        run: mono ./testrunner/xunit.runner.console.$XUNIT_RUNNER/tools/net461/xunit.console.exe ./Tests/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests/bin/Debug/net461/NewPlatform.Flexberry.ORM.ClickHouseDataService.Tests.dll
