--- a/Tests/Objects/Flexberry.ORM.ClickHouseDataService.Tests.Objects.csproj
+++ b/Tests/Objects/Flexberry.ORM.ClickHouseDataService.Tests.Objects.csproj
@@ -2,33 +2,17 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
-    <Configurations>Debug;Release</Configurations>
-    <LangVersion>latest</LangVersion>
     <RootNamespace>NewPlatform.ClickHouseDataService.Tests</RootNamespace>
     <AssemblyName>ClickHouseDataService.Tests.Objects</AssemblyName>
-    <SignAssembly>true</SignAssembly>
-    <DelaySign>false</DelaySign>
     <AssemblyOriginatorKeyFile>Flexberry.ORM.ClickHouseDataService.Tests.Objects.snk</AssemblyOriginatorKeyFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-    <CodeAnalysisRuleSet>..\..\Flexberry.ruleset</CodeAnalysisRuleSet>
     <AssemblyVersion>1.0.0.1</AssemblyVersion>
     <FileVersion>1.0.0.1</FileVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="NewPlatform.Flexberry.ORM" Version="6.0.1-beta03" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="StyleCop.Cache" />
+    <PackageReference Include="NewPlatform.Flexberry.ORM" Version="6.1.0-beta03" />
   </ItemGroup>
 
   <ItemGroup>
